--- a/etl.ipynb
+++ b/etl.ipynb
@@ -16,124 +16,13 @@
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71 files found in data/song_data\n",
-      "1/71 files processed.\n",
-      "2/71 files processed.\n",
-      "3/71 files processed.\n",
-      "4/71 files processed.\n",
-      "5/71 files processed.\n",
-      "6/71 files processed.\n",
-      "7/71 files processed.\n",
-      "8/71 files processed.\n",
-      "9/71 files processed.\n",
-      "10/71 files processed.\n",
-      "11/71 files processed.\n",
-      "12/71 files processed.\n",
-      "13/71 files processed.\n",
-      "14/71 files processed.\n",
-      "15/71 files processed.\n",
-      "16/71 files processed.\n",
-      "17/71 files processed.\n",
-      "18/71 files processed.\n",
-      "19/71 files processed.\n",
-      "20/71 files processed.\n",
-      "21/71 files processed.\n",
-      "22/71 files processed.\n",
-      "23/71 files processed.\n",
-      "24/71 files processed.\n",
-      "25/71 files processed.\n",
-      "26/71 files processed.\n",
-      "27/71 files processed.\n",
-      "28/71 files processed.\n",
-      "29/71 files processed.\n",
-      "30/71 files processed.\n",
-      "31/71 files processed.\n",
-      "32/71 files processed.\n",
-      "33/71 files processed.\n",
-      "34/71 files processed.\n",
-      "35/71 files processed.\n",
-      "36/71 files processed.\n",
-      "37/71 files processed.\n",
-      "38/71 files processed.\n",
-      "39/71 files processed.\n",
-      "40/71 files processed.\n",
-      "41/71 files processed.\n",
-      "42/71 files processed.\n",
-      "43/71 files processed.\n",
-      "44/71 files processed.\n",
-      "45/71 files processed.\n",
-      "46/71 files processed.\n",
-      "47/71 files processed.\n",
-      "48/71 files processed.\n",
-      "49/71 files processed.\n",
-      "50/71 files processed.\n",
-      "51/71 files processed.\n",
-      "52/71 files processed.\n",
-      "53/71 files processed.\n",
-      "54/71 files processed.\n",
-      "55/71 files processed.\n",
-      "56/71 files processed.\n",
-      "57/71 files processed.\n",
-      "58/71 files processed.\n",
-      "59/71 files processed.\n",
-      "60/71 files processed.\n",
-      "61/71 files processed.\n",
-      "62/71 files processed.\n",
-      "63/71 files processed.\n",
-      "64/71 files processed.\n",
-      "65/71 files processed.\n",
-      "66/71 files processed.\n",
-      "67/71 files processed.\n",
-      "68/71 files processed.\n",
-      "69/71 files processed.\n",
-      "70/71 files processed.\n",
-      "71/71 files processed.\n",
-      "30 files found in data/log_data\n",
-      "1/30 files processed.\n",
-      "2/30 files processed.\n",
-      "3/30 files processed.\n",
-      "4/30 files processed.\n",
-      "5/30 files processed.\n",
-      "6/30 files processed.\n",
-      "7/30 files processed.\n",
-      "8/30 files processed.\n",
-      "9/30 files processed.\n",
-      "10/30 files processed.\n",
-      "11/30 files processed.\n",
-      "12/30 files processed.\n",
-      "13/30 files processed.\n",
-      "14/30 files processed.\n",
-      "15/30 files processed.\n",
-      "16/30 files processed.\n",
-      "17/30 files processed.\n",
-      "18/30 files processed.\n",
-      "19/30 files processed.\n",
-      "20/30 files processed.\n",
-      "21/30 files processed.\n",
-      "22/30 files processed.\n",
-      "23/30 files processed.\n",
-      "24/30 files processed.\n",
-      "25/30 files processed.\n",
-      "26/30 files processed.\n",
-      "27/30 files processed.\n",
-      "28/30 files processed.\n",
-      "29/30 files processed.\n",
-      "30/30 files processed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
     "import psycopg2\n",
     "import pandas as pd\n",
-    "from sql_queries import *\n",
-    "%run etl.py"
+    "from sql_queries import *"
    ]
   },
   {
@@ -1736,7 +1625,7 @@
     "    else:\n",
     "        songid, artistid = None, None\n",
     "    # insert songplay record\n",
-    "    songplay_data = [index+1, row.ts, row.userId, row.level, songid, artistid, row.sessionId, row.location, row.userAgent]\n",
+    "    songplay_data = [ row.ts, row.userId, row.level, songid, artistid, row.sessionId, row.location, row.userAgent]\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
    ]
