--- a/etl.ipynb
+++ b/etl.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
+    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=postgres password=113361\")\n",
     "cur = conn.cursor()"
    ]
   },
